syntax = "proto3";

package expense;

option go_package = "github.com/Naveen2070/Go-projects/go-grpc/common";

service ExpenseService {
  rpc CreateExpense(CreateExpenseRequest) returns (CreateExpenseResponse);
  rpc GetExpenses(GetExpensesRequest) returns (GetExpensesResponse);
}

message CreateExpenseRequest {
  string title = 1;
  float amount = 2;
  string category = 3;
}

message CreateExpenseResponse {
  string id = 1;
  string message = 2;
}

message GetExpensesRequest {}

message GetExpensesResponse {
  repeated Expense expenses = 1;
}

message Expense {
  string id = 1;
  string title = 2;
  float amount = 3;
  string category = 4;
}

service HealthService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1; // "SERVING" or "NOT_SERVING"
}
